NCC/judge/error/93/93_1.txt
/home/ajay/Django/NCC17/NCC/judge/user/93/1/93_1.cpp: In function ‘int main()’:
/home/ajay/Django/NCC17/NCC/judge/user/93/1/93_1.cpp:8:10: error: ‘a’ was not declared in this scope
     cin>>a>>b;
          ^
/home/ajay/Django/NCC17/NCC/judge/user/93/1/93_1.cpp:8:13: error: ‘b’ was not declared in this scope
     cin>>a>>b;
             ^
